--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Pedro Costa Ferreira
+title: Pedro Costa Ferreia
 ---
 <div class="blurb">
-	<h1> </h1>
-	<p> <a href="/about"></a></p>
+	<h1>Pedro Costa Ferreira</h1>
+	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
