--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: Pedro Costa Ferreia
 ---
 <div class="blurb">
 	<h1>Pedro Costa Ferreira</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<p><a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
