--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: Pedro Costa Ferreia
 ---
 <div class="blurb">
 	<h1>Pedro Costa Ferreira</h1>
-	<p><a href="/about">Read more about my life</a></p>
+	<p><a href="/about">Read ---more about my life</a></p>
 </div><!-- /.blurb -->
