--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@ title: Pedro Costa
 		
           <hr>
           <h3><a href="#"><span class="label label-primary"><i class="fa fa-facebook" aria-hidden="true"></i></span></a>
-          <a href="http://twitter.com/share" class="twitter-share-button" 
-data-url="www.devmedia.com.br" data-text="Teste" data-count="horizontal" data-via="aqui-seu-nome-de-usuario-do-twitter" data-lang="pt"><span class="label label-info"><i class="fa fa-twitter" aria-hidden="true"></i></span></a>
+          <a href="http://twitter.com/share" class="twitter-share-button" <a href="http://twitter.com/share"  data-url="{{ post.url }}" data-text="{{ post.title }}" data-count="horizontal"  data-lang="pt"><span class="label label-info"><i class="fa fa-twitter" aria-hidden="true"></i></span></a>
           <a href="#"><span class="label label-danger"><i class="fa fa-google-plus" aria-hidden="true"></i></span></a></h3>
         </div><!--/.media-body-->
         </div><!--/.media-->
