--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ title: Pedro Costa
 		
           <hr>
           <h3><a href="#"><span class="label label-primary"><i class="fa fa-facebook" aria-hidden="true"></i></span></a>
-           <a href="http://twitter.com/share"  data-url="{{ post.url }}" data-text="{{ post.resumo }}" data-count="horizontal"  data-lang="pt"><span class="label label-info"><i class="fa fa-twitter" aria-hidden="true"></i></span></a>
+           <a href="https://twitter.com/intent/tweet?text={{ post.title }}&url={{ post.url }}{{ post.url }}&via={{ site.twitter_username }}&related={{ site.twitter_username }}" rel="nofollow" target="_blank" title="Share on Twitter" ><span class="label label-info"><i class="fa fa-twitter" aria-hidden="true"></i></span></a>
           <a href="#"><span class="label label-danger"><i class="fa fa-google-plus" aria-hidden="true"></i></span></a></h3>
         </div><!--/.media-body-->
         </div><!--/.media-->
