Solve the shiny app

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Pedro Costa
       </p>   	
   <!-- app shiny do pedro -->
   <div class="embed-responsive embed-responsive-4by3">
-     <iframe class="embed-responsive-item" src="https://pedroferreira.shinyapps.io/SeriesTemporais/"></iframe>
+     <iframe class="embed-responsive-item" src="https://pedroferreira.shinyapps.io/timeseries/"></iframe>
      </div>
   <!-- /app shiny do pedro -->
     
